@@ -21,6 +21,7 @@ java {
 
 dependencies {
     implementation('redis.clients:jedis:5.1.3')
+    implementation 'org.javassist:javassist:3.28.0-GA'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
@@ -66,4 +67,9 @@ tasks.register("showMeCache") {
 
 test {
     useJUnitPlatform()
+
+    jvmArgs = [
+            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED'
+    ]
 }
